# brilliant-sort

./: .gitignore  CMakeLists.txt  README.md  SUBMISSION.md  index.html  lefthook.yml  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.agents/skills/pixel-asset-pipeline/: SKILL.md
.github/workflows/: ci.yml
3d/: index.html
art/inbox/tux-mosaic/: build.ts  tux-01.map.json  validate.ts
art/palettes/: brilliant-sort.json  micro-tux.json
art/review/tux-mosaic/: index.html  pixel-bloom-preview.html
cmake/: PixelAudio.cmake
cpp/: connected_gems.cpp  connected_gems.hpp  connected_gems_test.cpp  core_cli.cpp  game_core.cpp  game_core.hpp  game_core_test.cpp
cpp/audio/: CMakeLists.txt  audio_worklet_adapter.cpp  audio_worklet_adapter.hpp  offline_renderer.cpp  pixel_audio.cpp  pixel_audio.hpp  tux_score.cpp
openspec/: AGENTS.md  config.yaml  project.md
openspec/changes/add-brilliant-sort-core/: proposal.md  tasks.md
openspec/changes/add-chrome-level/: design.md  proposal.md  tasks.md
openspec/changes/add-cpp-pixel-audio-engine/: design.md  proposal.md  tasks.md
openspec/changes/add-demo-assist-and-victory-finale/: design.md  tasks.md
openspec/changes/add-pixel-crystal-renderer/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/add-threejs-diorama/: design.md  proposal.md  tasks.md
src/: main-3d.tsx  main.tsx  styles.css
src/agent/: audit.ts  context.ts
src/app/: App.tsx  BoardCamera.tsx  VictoryFinale.tsx  stage-layout.ts
src/audio/: browser-audio.ts  contracts.ts  game-cues.ts  index.ts  pixel-audio-processor.js  tux-01.music.json
src/core/: coords.ts  dump.ts  index.ts  level.ts  port.ts  reducer.ts  selectors.ts  topology.ts  types.ts
src/fixtures/: chrome-01.json  index.ts  prism-01.json  tux-01.json
src/harness/: cli.ts  diff.ts  differential.ts  index.ts  replay.ts  scenario.ts
src/pixel-bloom/: cli.ts  core.ts  index.ts  png.ts  preview.ts  types.ts
src/three/: DioramaRenderer.ts  ThreeGameApp.tsx  contracts.ts  interaction.ts  layout.ts  motion.ts  three-game.css
src/wasm/: game-core.ts
submission/: Brilliant-Sort-Answer.html  evidence-matrix.md  print.css
tests/: three-interaction.test.ts  three-model.test.ts
tests/agent/: audit.test.ts  context.test.ts
tests/app/: stage-layout.test.ts
tests/audio/: game-cues.test.ts
tests/core/: global-wand.test.ts  reducer.test.ts  state-machine-properties.test.ts
tests/e2e/: game.e2e.ts
tests/fixtures/: level-map.test.ts
tests/harness/: differential.test.ts  replay.test.ts
tests/pixel-bloom/: core.test.ts  micro-tux.test.ts
tests/wasm/: game-core.test.ts
tools/: compile-level-map.ts
(+81 files in other folders)
